[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "torchnf"
version = "0.1.0"
description = "A library containing building blocks for normalising flows, implemented in PyTorch"
authors = ["marshrossney <17361029+marshrossney@users.noreply.github.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.11.0"
pytorch-lightning = {version = "^1.6.3", optional = true}
tqdm = "^4.64.0"
protobuf = "3.19"
torchmetrics = "^0.9.1"
tensorboard = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
hypothesis = "^6.46.2"
black = "^22.3.0"
flake8 = "^4.0.1"
coverage = "^6.3.2"
ipython = "^8.3.0"
numpy = "^1.22.3"

[tool.pytest.ini_options]
pythonpath = ["src"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytorch_lightning.utilities.warnings.PossibleUserWarning",
]

[tool.black]
line-length = 79
target-version = ['py39']
exclude = '''
(
  /(
      \.git
    | \.github
    | \.pytest_cache
    | \.tox
    | \.venv
    | \.hypothesis
    | docs
    | __pycache__
  )/
)
'''
